--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div ng-app="myApp" ng-controller="postsCtrl" id="main"> 
 
         <h1>Flickr Public Feed</h1>
-       <div class="g-plusone" size="standard" count="true" href="#" id="gplus"></div>
+       <div class="g-plusone" size="standard" count="true" href="http://teglanna.github.io/potato_task/" id="gplus"></div>
     <div id="content">
         <ul id="post-list" infinite-scroll="loadMore()" infinite-scroll-distance="0">
           <li ng-repeat="item in posts">
