--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="canonical" href="http://www.example.com" />
+        <link rel="canonical" href="http://teglanna.github.io/potato_task/" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
         <script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
         <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
