--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
 
     <div ng-app="myApp" ng-controller="postsCtrl" id="main"> 
-
+    <div id="gplus"><div class="g-plusone" size="standard" count="true" href="http://teglanna.github.io/potato_task/"></div></div>
         <h1>Flickr Public Feed</h1>
-       <div class="g-plusone" size="standard" count="true" href="http://teglanna.github.io/potato_task/" id="gplus"></div>
+       
     <div id="content">
         <ul id="post-list" infinite-scroll="loadMore()" infinite-scroll-distance="0">
           <li ng-repeat="item in posts">
