README file added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p class='date'> {{ item.published_date }} </p>
                     <p>
                         <a ng-href='{{ item.author_link }}' target='_blank'> {{ item.photo_author }}</a>
-                        &nbsp&nbsp&nbsp<a ng-href='{{ item.link }}' target='_blank'>View on Flickr</a>
+                        &nbsp&nbsp<a ng-href='{{ item.link }}' target='_blank'>View on Flickr</a>
                     </p>
                 </div>
             </div>
@@ -60,6 +60,12 @@
                     <img ng-src="{{ detail.pic }}"/>
                 </div>
             
+                <p>
+                    Lorem ipsum dolor sit amet, vix consul graece intellegam et, sed viris ceteros in. Sea eu corpora patrioque, pro ex error fastidii atomorum. Ex has primis ornatus conceptam, et iuvaret hendrerit eos. Ea eam aeque noluisse, et putent voluptua contentiones vim, sale omittantur eu cum. Abhorreant assueverit ad pro.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, vix consul graece intellegam et, sed viris ceteros in. Sea eu corpora patrioque, pro ex error fastidii atomorum. Ex has primis ornatus conceptam, et iuvaret hendrerit eos. Ea eam aeque noluisse, et putent voluptua contentiones vim, sale omittantur eu cum. Abhorreant assueverit ad pro.
+                </p>
                 <p>
                     Lorem ipsum dolor sit amet, vix consul graece intellegam et, sed viris ceteros in. Sea eu corpora patrioque, pro ex error fastidii atomorum. Ex has primis ornatus conceptam, et iuvaret hendrerit eos. Ea eam aeque noluisse, et putent voluptua contentiones vim, sale omittantur eu cum. Abhorreant assueverit ad pro.
                 </p>
